add these changes

--- a/deals.html
+++ b/deals.html
@@ -18,22 +18,59 @@
 
 <section>
 
+<!-- Product 1 -->
 <div class="product">
-  <h3>Vegetable Chopper</h3>
-  <p>High-quality kitchen chopper perfect for daily cooking.</p>
-  <a href="#" class="btn">Check Price on Amazon</a>
+  <h3>Vegetable Chopper – Best Kitchen Gadget Under $25</h3>
+  <p>Save time in the kitchen with this compact vegetable chopper. Perfect for chopping onions, carrots, and more in seconds.</p>
+  <ul>
+    <li>Pros: Easy to clean, sharp stainless-steel blades, compact and lightweight</li>
+    <li>Cons: Small capacity (best for 1–2 servings)</li>
+  </ul>
+  <a href="YOUR_AFFILIATE_LINK" class="btn">Check Price on Amazon</a>
 </div>
 
+<!-- Product 2 -->
 <div class="product">
-  <h3>Fast Charging Cable</h3>
-  <p>Durable cable compatible with most smartphones.</p>
-  <a href="#" class="btn">Check Price on Amazon</a>
+  <h3>Fast Charging USB-C Cable – Under $15</h3>
+  <p>Durable USB-C charging cable compatible with most modern smartphones. Supports fast charging and data transfer.</p>
+  <ul>
+    <li>Pros: Fast charging, strong tangle-free design, affordable</li>
+    <li>Cons: Limited length options</li>
+  </ul>
+  <a href="YOUR_AFFILIATE_LINK" class="btn">Check Price on Amazon</a>
 </div>
 
+<!-- Product 3 -->
 <div class="product">
-  <h3>LED Strip Lights</h3>
-  <p>Perfect for bedroom and gaming setup decoration.</p>
-  <a href="#" class="btn">Check Price on Amazon</a>
+  <h3>LED Strip Lights – Decor Under $20</h3>
+  <p>Add color and ambiance to your bedroom, living room, or gaming setup. Easy to install with remote-controlled light modes.</p>
+  <ul>
+    <li>Pros: Multiple colors and modes, remote controlled, flexible</li>
+    <li>Cons: Requires nearby power outlet</li>
+  </ul>
+  <a href="YOUR_AFFILIATE_LINK" class="btn">Check Price on Amazon</a>
+</div>
+
+<!-- Product 4 -->
+<div class="product">
+  <h3>Pet Toy Set – Fun for Dogs & Cats Under $15</h3>
+  <p>Keep your pets entertained with this durable toy set. Includes squeaky balls and chew toys suitable for cats and small dogs.</p>
+  <ul>
+    <li>Pros: Durable & safe, variety of toys, great for small pets</li>
+    <li>Cons: May wear out with heavy chewers</li>
+  </ul>
+  <a href="YOUR_AFFILIATE_LINK" class="btn">Check Price on Amazon</a>
+</div>
+
+<!-- Product 5 -->
+<div class="product">
+  <h3>Compact Travel Organizer – Under $25</h3>
+  <p>Organize your toiletries, gadgets, or accessories with this lightweight travel organizer. Perfect for trips or daily carry.</p>
+  <ul>
+    <li>Pros: Multiple compartments, lightweight, affordable</li>
+    <li>Cons: Small size (best for short trips)</li>
+  </ul>
+  <a href="YOUR_AFFILIATE_LINK" class="btn">Check Price on Amazon</a>
 </div>
 
 </section>
