--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a href="about.html">About</a>
   <a href="contact.html">Contact</a>
   <a href="privacy.html">Privacy Policy</a>
-  <a href="disclosure.html">Disclosure</a>
+  <a href="disclosure.html">Affiliate Disclosure</a>
 </nav>
 
 <section class="hero">
