--- a/deals.html
+++ b/deals.html
@@ -26,7 +26,7 @@
     <li>Pros: Easy to clean, sharp stainless-steel blades, compact and lightweight</li>
     <li>Cons: Small capacity (best for 1–2 servings)</li>
   </ul>
-  <a href="YOUR_AFFILIATE_LINK" class="btn">Check Price on Amazon</a>
+  <a href="https://amzn.in/d/0hxXt5u9" class="btn">Check Price on Amazon</a>
 </div>
 
 <!-- Product 2 -->
@@ -37,7 +37,7 @@
     <li>Pros: Fast charging, strong tangle-free design, affordable</li>
     <li>Cons: Limited length options</li>
   </ul>
-  <a href="YOUR_AFFILIATE_LINK" class="btn">Check Price on Amazon</a>
+  <a href="https://amzn.in/d/0eqybkSi" class="btn">Check Price on Amazon</a>
 </div>
 
 <!-- Product 3 -->
@@ -48,7 +48,7 @@
     <li>Pros: Multiple colors and modes, remote controlled, flexible</li>
     <li>Cons: Requires nearby power outlet</li>
   </ul>
-  <a href="YOUR_AFFILIATE_LINK" class="btn">Check Price on Amazon</a>
+  <a href="https://amzn.in/d/0ahzSaKr" class="btn">Check Price on Amazon</a>
 </div>
 
 <!-- Product 4 -->
@@ -59,7 +59,7 @@
     <li>Pros: Durable & safe, variety of toys, great for small pets</li>
     <li>Cons: May wear out with heavy chewers</li>
   </ul>
-  <a href="YOUR_AFFILIATE_LINK" class="btn">Check Price on Amazon</a>
+  <a href="https://amzn.in/d/0bm8hhy4" class="btn">Check Price on Amazon</a>
 </div>
 
 <!-- Product 5 -->
@@ -70,7 +70,7 @@
     <li>Pros: Multiple compartments, lightweight, affordable</li>
     <li>Cons: Small size (best for short trips)</li>
   </ul>
-  <a href="YOUR_AFFILIATE_LINK" class="btn">Check Price on Amazon</a>
+  <a href="https://amzn.in/d/00kQTNDg" class="btn">Check Price on Amazon</a>
 </div>
 
 </section>
